--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "schemator",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.9",
-    "@types/react-dom": "18.2.4",
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.7",
-    "typescript": "5.1.3"
-  }
+    "name": "schemator",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/base": "^5.0.0-beta.4",
+        "@mui/material": "^5.13.4",
+        "@reduxjs/toolkit": "^1.9.5",
+        "@types/node": "20.2.5",
+        "@types/react": "18.2.9",
+        "@types/react-dom": "18.2.4",
+        "classnames": "^2.3.2",
+        "next": "13.4.4",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.9.0",
+        "react-redux": "^8.0.7",
+        "typescript": "5.1.3"
+    }
 }
