--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
-    "name": "schemator",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "@mui/base": "^5.0.0-beta.4",
-        "@mui/material": "^5.13.4",
-        "@reduxjs/toolkit": "^1.9.5",
-        "@types/node": "20.2.5",
-        "@types/react": "18.2.9",
-        "@types/react-dom": "18.2.4",
-        "classnames": "^2.3.2",
-        "next": "13.4.4",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-hook-form": "^7.44.3",
-        "react-icons": "^4.9.0",
-        "react-redux": "^8.0.7",
-        "typescript": "5.1.3"
-    }
+  "private": true,
+  "name": "my-nextron-app",
+  "description": "My application description",
+  "version": "1.0.0",
+  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "main": "app/background.js",
+  "scripts": {
+    "dev": "nextron",
+    "build": "nextron build",
+    "postinstall": "electron-builder install-app-deps"
+  },
+  "dependencies": {
+    "electron-serve": "^1.1.0",
+    "electron-store": "^8.1.0",
+    "react-hook-form": "^7.44.3",
+    "react-icons": "^4.9.0",
+    "react-redux": "^8.0.7",
+    "typescript": "5.1.3",
+    "classnames": "^2.3.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.4",
+    "@mui/material": "^5.13.4",
+    "@reduxjs/toolkit": "^1.9.5"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "electron": "^21.3.3",
+    "electron-builder": "^23.6.0",
+    "next": "^12.3.4",
+    "nextron": "^8.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.9.4"
+  }
 }
